k8s/explorer-api-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml -f docker-compose.override.yml convert
    kompose.version: 1.18.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: explorer-api
  name: explorer-api
spec:
  replicas: 2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: explorer-api
    spec:
      containers:
      - env:
        - name: PORT
          value: "80"
        image: 155651965374.dkr.ecr.eu-west-2.amazonaws.com/explorer-api:latest
        name: explorer-api
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
status: {}
