k8s/explorer-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml -f docker-compose.override.yml convert
    kompose.version: 1.18.0 ()
  creationTimestamp: null
  labels:
    app: explorer
    io.kompose.service: explorer-api
  name: explorer-api
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
    protocol: TCP
  type: NodePort
  selector:
    io.kompose.service: explorer-api
status:
  loadBalancer: {}
