k8s/explorer-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml -f docker-compose.override.yml convert
    kompose.version: 1.18.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: explorer-client
  name: explorer-client
spec:
  ports:
  - name: "http"
    port: 80
    targetPort: 80
    protocol: TCP
  type: NodePort
  selector:
    io.kompose.service: explorer-client
status:
  loadBalancer: {}
